--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -9,8 +9,8 @@ format:
     slideNumber: true
     auto: true
     scrollable: true
-    embed-resources: true
-    self-contained-math: true
+    # embed-resources: true
+    # self-contained-math: true
 execute:
   enabled: true
   echo: true
@@ -262,7 +262,7 @@ fig.show()
 - In order to have comparable poverty rates between different areas in the UK, we consider the poverty rate after adjusting for housing costs.
 - This is reported at the MSOA level.
 
-## Poverty rate
+## Poverty rate by MSOA
 
 ```{python}
 #| label: poverty-comparison
@@ -276,7 +276,7 @@ uk_poverty_cum_20 = round((merged["poverty_rateE"] > 30).sum() / len(merged),1)
 fig = plot_histograms("poverty_rateE", merged, "Leeds", n_bins=30)
 fig.show()
 ```
-- Poverty rates in Leeds have a heavier tail than the UK, with `{python} leeds_poverty_cum_20` of MSOAs having more than 20% poverty, compared to `{python} uk_poverty_cum_20` in the UK.
+- Poverty rates in Leeds have a heavier tail than the UK, with `{python} leeds_poverty_cum_20` of MSOAs having more than 30% poverty, compared to `{python} uk_poverty_cum_20` in the UK.
 
 ## Location of poverty
 
@@ -327,9 +327,11 @@ They
 
 ::: {.column width="50%"}
 <!-- add picture of UKGS -->
-![](assets/Pb_v1.png){width=80%}
+![](assets/Pb_v1_annot.png){width=80%}
 :::
 :::
+
+## Constructing soil lead by MSOA
 
 We then use this 500m grid to compute two measures:
 
@@ -345,13 +347,18 @@ We then use this 500m grid to compute two measures:
 [^1]: UK Geological Survey. Retrieved from [https://www.ukso.org/static-maps/uk-topsoil-geochemistry.html](https://www.ukso.org/static-maps/uk-topsoil-geochemistry.html)
 
 
-## Soil lead comparison
+## Soil lead comparison by MSOAs
+
 ```{python}
 #| label: soil-lead-comparison
 #| echo: false
 merged_no_soil_na = merged.dropna(subset=["soil_lead_mean"])
-fig = plot_histograms("soil_lead_mean", merged_no_soil_na, location="Leeds", other_location="UK", n_bins=40)
-fig.update_layout(title="Soil lead concentration in Leeds vs UK")
+fig = plot_histograms("idw_soil_lead_mean", merged_no_soil_na, location="Leeds", other_location="UK", n_bins=40)
+fig.update_layout(
+  title="Soil lead concentration in Leeds vs UK",
+  # change x label
+  xaxis_title="weighted average concentration (mg/kg)"
+  )
 # limit x-axis to 300
 fig.update_xaxes(range=[0, 300])
 fig.show()
@@ -380,7 +387,7 @@ fig.show()
 - We can combine the risk factors to create a hazard map
 - We can use the hazard map to identify high risk areas
   
-- This was previously done by Public Health England & Imperial College London, with our data we can supercede their work
+- This was previously done by Public Health England & Imperial College London, with our data we can add to their work
 
 ## Comparison with Public Health England {.smaller}
 
