--- a/presentations/leeds.qmd
+++ b/presentations/leeds.qmd
@@ -9,8 +9,8 @@ format:
     slideNumber: true
     auto: true
     scrollable: true
-    # embed-resources: true
-    # self-contained-math: true
+    embed-resources: true
+    self-contained-math: true
 execute:
   enabled: true
   echo: true
@@ -268,7 +268,7 @@ fig.show()
 #| label: high-income-location
 #| echo: false
 
-fig = plot_chloropleth("median_annual_incomeE", merged, "Leeds", color_continuous_scale="rdylbu_r")
+fig = plot_chloropleth("median_annual_incomeE", merged, "Leeds", color_continuous_scale="Viridis")
 fig.show()
 ```
 - The northern outskirts are richer than the center
@@ -286,14 +286,9 @@ fig.show()
 #| cache: false
 #| echo: false
 
-# compute proportion of MSOAs that have more than 20% poverty.
-leeds_poverty_cum_20 = round((leeds["poverty_rateE"] > 30).sum() / len(leeds),1)
-uk_poverty_cum_20 = round((merged["poverty_rateE"] > 30).sum() / len(merged),1)
-
 fig = plot_histograms("poverty_rateE", merged, "Leeds", n_bins=30)
 fig.show()
 ```
-- Poverty rates in Leeds have a heavier tail than the UK, with `{python} leeds_poverty_cum_20` of MSOAs having more than 30% poverty, compared to `{python} uk_poverty_cum_20` in the UK.
 
 ## Location of poverty
 
